--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 					<h1>Ein Experiment zur Überprüfung</h1>
 					<p>Dann bist du hier genau richtig, da im Zuge eines selbst durchgeführten Untersuchung die Stichhaltigkeit des EEK-Siegels anhand verschiedener Leuchtmittel experimentell überprüft wurde.
 					Über die Planung, Durchführung und Gestaltung bis hin zur Auswertung eines Experiments ist alles dabei...</p>
-					<a href="Dokumente/#" target="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf">Mehr erfahren...</a>
+					<a href="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf" target="abot:blank">Mehr erfahren...</a>
 				</div>
 			</div>
 		</div>
