--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 							<summary>
 								<div class="aligner"><a class="davor">DTS:X</a></div>
 								<div class="aligner"><a class="danach"></a></div>
-								<div style="text-align:center;"><img src="http://www.getfilings.com/sec-filings/160307/DTS-INC_10-K/dtsx01.jpg" alt=""></div>
+								<div style="text-align:center;"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/DTS_X_B%26W.png" alt=""></div>
 							</summary>
 							<div class="list-container">
 								<p>Die „DTS:X“ – Kennzeichnung wird von dem kalifornischen Unternehmen „DTS, Inc.“ verwaltet und beschreibt ein Konkurrenzformat des Kinostandards „Dolby Atmos“ der Dolby Laboratories und wurde kurz nach diesem auf den Hifi-Markt gebracht.
