--- a/quellen.html
+++ b/quellen.html
@@ -231,12 +231,12 @@
         </ul>
         <h1>Physichologie von Gütesiegeln</h1>
         <ul class="quellenliste">
-			<li class="quellenlisten-item">
-				<div class="quellenitem">Template</div> 
-				<div class="quelle">einlikundsooooooooooooo</div>
+			 <li class="quellenlisten-item">
+				<div class="quellenitem" style="text-align:center;"><b>Name</b></div> 
+				<div class="quellenitem" style="text-align:center;"><b>Quelle</b></div> 
 			</li>
 		</ul>
-		<h1>Fake Siegel</h1>
+		<!--h1>Fake Siegel</h1>
         <ul class="quellenliste">
 			<li class="quellenlisten-item">
 				<div class="quellenitem">Template</div> 
@@ -249,12 +249,12 @@
 				<div class="quellenitem">Template</div> 
 				<div class="quelle">einlikundsooooooooooooo</div>
 			</li>
-		</ul>
+		</ul-->
 		<h1>Gütesiegel auf einem Netzteil</h1>
         <ul class="quellenliste">
 			<li class="quellenlisten-item">
-				<div class="quellenitem"></div> 
-				<div class="quelle"></div>
+				<div class="quellenitem">Stromkabel Quellen</div> 
+				<div class="quelle"><a href="Dokumente/Quellen Stromkabel.pdf">https://herrfreude.github.io/Abgesiegelt/Dokumente/Quellen%20Stromkabel.pdf</a></div>
 			</li>
 		</ul>
 	</div>
