--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 								<p>Im Heimkinosektor findet man das Siegel zum Exempel auf Lautsprechern, AV-Receivern, Fernsehern, Laptops und diversen Playern, die für die Verarbeitung von Tonsignalen zuständig sind. Es garantiert eine Prüfung der Komponenten auf eine angemessene, den „THX“-Standards entsprechende Soundverarbeitung und Klangqualität, bezogen auf den Frequenzgang, die Leistung, das Einmesssystem (Equalizer) und die Trennfrequenz von 80 Hertz.
 								In den richtigen Räumen, unter Erfüllung jeglicher Normen wird demnach ein Ton und Bild generiert, welche den Erwartungen der Ton- und Bildtechnikern entsprechen. Zudem weisen die Geräte bereits Voreinstellungen auf, die die Kalibrierung im eigenen Raum erleichtert und miteinander sehr gut kompatibel sind.</p>
 								<p>Hersteller von Lautsprechern, Receivern und Co. können ihre Komponente auf freiwilliger Basis testen lassen und bekommen bei Erfüllung der Standards in einem aufwendigen Testverfahren die Lizenz, die jährlich erneuert werden muss. Verbraucher können sich anhand des Qualitätssiegels auf dem Hifi-Markt orientieren und von einer geprüften Qualität ausgehen. Da allerdings die räumlichen Gegebenheiten inklusive der Raumakustik sowie die eingesetzte Lautsprechertechnik und Aufstellung stimmen muss, können Verbraucher im Heimkinobereich nur schwer alle THX-Normen für ein optimales Kino-Erlebnis erreichen, sodass die Notwendigkeit im Heimkinobereich umstritten ist.</p>
-
+								<p><img src="Bilder/THXGRAFIK.jpg" style="width=100%;"></p>
 							</div>
 						</details>
 					</li>
@@ -1038,6 +1038,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 								Dolby Vision zählt hingegen zu den dynamischen HDR-Formaten, die während eines gesamten Films Kontrastwerte, die Farbsättigung und sonstige Lichteffekte kontinuierlich an die jeweiligen Szenen und dem Endgerät anpassen. Damit kann gewährleistet werden, dass das Bild neben der allgemeinen Auflösung, den Vorstellungen der Filmemacher entspricht und überaus natürlich und realitätsnah wirkt. </p>
 							    <p>Das Siegel kann man auf TV-Geräten, Blu-ray-Playern, AV-Receivern oder auch 4K-Blu-rays finden. Es signalisiert eine Kompatibilität mit der speziellen HDR-Technik im Sinne der Wiedergabe, Verarbeitung und den Transport der relevanten Daten.
 								Für eine Übertragung ist der HDMI 2.0 Standard relevant.</p>
+								<p><img src="Bilder/Dolby.png" style="width=100%;"></p>
 							</div>
 						</details>
 					</li>
@@ -1081,6 +1082,21 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 								Bei einem objektbasierten Verfahren hingegen wird mit anderen Datensätzen und Techniken gearbeitet, die den Fokus auf eine detaillierte Darstellung, von sich im Raum bewegenden Objekten mit ihren jeweiligen Geräuschen ermöglicht. So wird für jedes Objekt im Voraus Vektoren, also Positionen und deren Änderung definiert. Ein Decoder wandelt schließlich die Audioszene auf das verfügbare Medium um und kann den Ton individuell an die vorhandenen Lautsprecheraufstellung und den vorliegenden Metadaten anpassen.
 								Bei Heimkinosystemen mit AV-Receiver ist zudem eine vorherige Einmessung zur Lokalisierung der Positionen der einzelnen Lautsprecher wichtig.</p>
 								<p>Eine Auszeichnung des Siegels findet man zum Exempel auf Lautsprechern, AV-Receiver, TV-Geräten, Blu-ray-Playern oder Blu-rays, die eine funktionsfähige Datenverarbeitung und Wiedergabe sicherstellen soll. Geräte, die mit Dolby Atmos kompatibel sind können i.d.R. auch mit dem Soundformat von „dts“ betrieben werden, da beide auf dem Markt anerkannte Tonformate sind</p>
+							</div>
+						</details>
+						<li class="collection-item ton">
+						<details>
+							<summary>
+								<div class="aligner"><a class="davor">Auro-3D</a></div>
+								<div class="aligner"><a class="danach"></a></div>
+								<div style="text-align:center;"><img src="Siegel/Auro3d.jpg" alt=""></div>
+							</summary>
+							<div class="list-container">
+								<p>„Auro-3D“ zählt zu den immersiven, dreidimensionalen Audioformaten und wird von dem belgischen Unternehmen „Auro Technologies“ vertrieben. Das Konzept wurde im Jahr 2005 von Wilfried Van Baelen und seinem Team aus Ingenieuren im Zuge der „Galaxy Studios“, einem Tonstudiounternehmen aus Belgien entwickelt.</p>
+								<p>„Auro-3D“ bietet eine spezifische Art von „Immersive Sound“, die eine präzisere Dimension der Höhe hinzufügt. Durch ein dreistufiges System [horizontal: 0° ; Höhenebene(seitlich): 45° ; oberste Höhenebenen: 90°] können entlang der vertikalen Ebene subtilere Geräuschkulissen generiert werden. Dabei wird ein „kanalbasiertes“, sowohl „objektbasiertes“ Verfahren unterstützt. 
+								Der wesentliche Unterschied zu Standards wie „Dolby Atmos“ oder „DTS:X“ liegt allerdings darin, dass „Auro-3D“ für die Höhenlautsprecher eigene Audiospuren bereitstellt, die auf einem „kanalbasierten“ Verfahren beruhen. Mit Hilfe von speziell dafür entwickelten „Auro-3D-Mikrofon-Anlagen“ können entsprechende Töne nativ inklusive diversen Reflexionen bei Filmproduktionen aufgenommen werden.</p>
+								<p>Eine entsprechende Kennzeichnung mit dem Siegel findet man zum Exempel auf Filmen, Musikstücken, Blu-rays, AV-Receivern oder Soundanlagen, die eine Unterstützung der Technik signalisiert.</p>
+								<p>Da es momentan nur wenig Inhalte, wie Blu-rays mit den entsprechenden Höheninformationen von „Auro-3D“ gibt, bietet sich die Verwendung von sogenannten „Upmixern“, insbesondere die eigens entwickelte „Auro-Matic“-Upmixing Technologie an. AV-Receiver, die mit dem Siegel ausgezeichnet sind, verfügen über jene Technologie und können zum Beispiel Mono-, Stereo- , 5.1/7.1-Tonspuren in einen „künstlichen“ 3D-Sound umwandeln.</p>
 							</div>
 						</details>
 					</li>
