--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
             </button>
             Dann bist du hier genau richtig, da im Zuge eines selbst durchgeführten Untersuchung die Stichhaltigkeit des EEK-Siegels anhand verschiedener Leuchtmittel experimentell überprüft wurde.
 					Über die Planung, Durchführung und Gestaltung bis hin zur Auswertung eines Experiments ist alles dabei...</p>
-					<a href="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf" target="abot:blank">Mehr erfahren...</a>
+					<a href="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf" target="abot:blank">Mehr erfahren...</a> <a href="https://www.verbraucherzentrale-rlp.de/sites/default/files/migration_files/media234424A.pdf" target="about:blank">Information der Verbraucher Zentrale...</a> 
 				</div>
 			</div>
 		</div>
