--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 							</summary>
 							<div class="list-container">
 								<p>„Auro-3D“ zählt zu den immersiven, dreidimensionalen Audioformaten und wird von dem belgischen Unternehmen „Auro Technologies“ vertrieben. Das Konzept wurde im Jahr 2005 von Wilfried Van Baelen und seinem Team aus Ingenieuren im Zuge der „Galaxy Studios“, einem Tonstudiounternehmen aus Belgien entwickelt.</p>
-								<p>„Auro-3D“ bietet eine spezifische Art von „Immersive Sound“, die eine präzisere Dimension der Höhe hinzufügt. Durch ein dreistufiges System [horizontal: 0° ; Höhenebene(seitlich): 45° ; oberste Höhenebenen: 90°] können entlang der vertikalen Ebene subtilere Geräuschkulissen generiert werden. Dabei wird ein „kanalbasiertes“, sowohl „objektbasiertes“ Verfahren unterstützt. 
+								<p>„Auro-3D“ bietet eine spezifische Art von „Immersive Sound“, die eine präzisere Dimension der Höhe hinzufügt. Durch ein dreistufiges System [horizontal: 0° ; Höhenebene(seitlich): 45° ; oberste Höhenebenen: 90°] können entlang der vertikalen Ebene subtilere Geräuschkulissen generiert werden. Dabei wird ein „kanalbasiertes“, sowohl „objektbasiertes“ Verfahren unterstützt.
 								Der wesentliche Unterschied zu Standards wie „Dolby Atmos“ oder „DTS:X“ liegt allerdings darin, dass „Auro-3D“ für die Höhenlautsprecher eigene Audiospuren bereitstellt, die auf einem „kanalbasierten“ Verfahren beruhen. Mit Hilfe von speziell dafür entwickelten „Auro-3D-Mikrofon-Anlagen“ können entsprechende Töne nativ inklusive diversen Reflexionen bei Filmproduktionen aufgenommen werden.</p>
 								<p>Eine entsprechende Kennzeichnung mit dem Siegel findet man zum Exempel auf Filmen, Musikstücken, Blu-rays, AV-Receivern oder Soundanlagen, die eine Unterstützung der Technik signalisiert.</p>
 								<p>Da es momentan nur wenig Inhalte, wie Blu-rays mit den entsprechenden Höheninformationen von „Auro-3D“ gibt, bietet sich die Verwendung von sogenannten „Upmixern“, insbesondere die eigens entwickelte „Auro-Matic“-Upmixing Technologie an. AV-Receiver, die mit dem Siegel ausgezeichnet sind, verfügen über jene Technologie und können zum Beispiel Mono-, Stereo- , 5.1/7.1-Tonspuren in einen „künstlichen“ 3D-Sound umwandeln.</p>
@@ -1150,12 +1150,12 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 				<div class="text">
 					<h1>Fake-Siegel im Onlinehandel</h1>
 					<p>
-            <button id="ASong45" onClick="playPause45()">
+            <button id="ASong45" onClick="playPause4()">
               <audio src="Audio/Fake-Siegel.mp3" autoplay preload="none"></audio><style='font-size:15px'><i class='fas fa-audio-description'></i>
             </button>
 
             In diesem Bereich wird sich mit dem Teilgebiet der Fake-Shops bei einem Onlinekauf beschäftigt. Hierbei erfahren Sie die Vorteile und die Gefahren der Gütesiegel und weshalb Gütesiegel im Onlinesegment ein Problem oder eine Lösung bieten.</p>
-					<a href="Dokumente/Checkliste für einensicheren Kauf auf einer Internet-Webseite.pdf" target="about:blank">Tipps zu einem Sicheren Online kauf...</a> <a href="Dokumente/Fake Gütesiegel und Online Siegel.pdf" target="about:blank">Mehr erfahren...</a>
+					<a href="Dokumente/Checkliste für einensicheren Kauf auf einer Internet-Webseite.pdf" target="about:blank">Tipps zu einem sicheren Onlinekauf...</a> <a href="Dokumente/Fake Gütesiegel und Online Siegel.pdf" target="about:blank">Mehr erfahren...</a>
 				</div>
 				<div class="image">
 
@@ -1172,7 +1172,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
             </button>
             Dann bist du hier genau richtig, da im Zuge eines selbst durchgeführten Untersuchung die Stichhaltigkeit des EEK-Siegels anhand verschiedener Leuchtmittel experimentell überprüft wurde.
 					Über die Planung, Durchführung und Gestaltung bis hin zur Auswertung eines Experiments ist alles dabei...</p>
-					<a href="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf" target="abot:blank">Mehr erfahren...</a> <a href="https://www.verbraucherzentrale-rlp.de/sites/default/files/migration_files/media234424A.pdf" target="about:blank">Information der Verbraucher Zentrale...</a> 
+					<a href="Dokumente/Der experimentelle Vergleich von Leuchtmittelnunterschiedlicher Energieeffizienzklassen.pdf" target="abot:blank">Mehr erfahren...</a> <a href="https://www.verbraucherzentrale-rlp.de/sites/default/files/migration_files/media234424A.pdf" target="about:blank">Information der Verbraucher Zentrale...</a>
 				</div>
 			</div>
 		</div>
@@ -1184,7 +1184,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 				<p> <button id="ASong7" onClick="playPause7()">
             <audio src="Audio/Warumhabenwirunsdamitbeschaftigt.mp3" autoplay preload="none"></audio><style='font-size:15px'><i class='fas fa-audio-description'></i>
           </button>
-          Es wurde sich mit diesem Thema "Gütesiegel" im Rahmen eines Schulgruppenprojektes beschäftigt. Das Ziel unsere Gruppe war es verständliche und benutzerfreundliche Aufklärung über Gütesiegel zu erstellen. Darauffolgend soll der Leser allgemeinen Spezifikationen und Aussagen über Gütesiegel nachschlagen und -vollziehen können.</p>
+          Es wurde sich mit diesem Thema "Gütesiegel" im Rahmen eines Schulgruppenprojektes beschäftigt. Das Ziel unsere Gruppe war es verständliche und benutzerfreundliche Aufklärung über Gütesiegel erstellt. Darauffolgend soll der Leser allgemeinen Spezifikationen und Aussagen über Gütesiegel nachschlagen und -vollziehen können.</p>
 			</details>
 			<details>
 				<summary>Warum ist das Projekt reißerisch gestaltet?</summary>
@@ -1204,7 +1204,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 				<p> <button id="ASong10" onClick="playPause10()">
             <audio src="Audio/Warum funktioniert diese Seite in ChromeSafariMobile... nicht richtig.mp3" autoplay preload="none"></audio><style='font-size:15px'><i class='fas fa-audio-description'></i>
           </button>
-          Verschiedene Internet-Browser verwenden jeweils ihre eigene Engine. Dadurch ist der programmierte Code nicht für jeden Internet-Browser nicht optimal ausfürbar.</p>
+          Verschiedene Internet-Browser verwenden jeweils ihre eigene Engine. Dadurch ist der programmierte Code nicht für jeden Internet-Browser nicht optimal ausführbar.</p>
 			</details>
 			<details>
 				<summary>Weitere Links zum Thema</summary>
