--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</p>
 
 			<div class="wasmachste">
-				<p><a href="#psycho">➤ Wie Siegel ausgenutzt werden</a> <a href="#label">➤ Siegel ist nicht gleich Siegel</a> <a href="#netzteil">➤ Überfluss von Siegeln für den Nutzer</a></p>
+				<p><a href="#psycho" style="grid-area:tesst1;">➤ Wie Siegel ausgenutzt werden</a> <a href="#label" style="grid-area:tesst2;">➤ Siegel ist nicht gleich Siegel</a> <a href="#netzteil" style="grid-area:tesst3;">➤ Überfluss von Siegeln für den Nutzer</a></p>
 			</div>
 		</div>
 	</header>
@@ -1054,13 +1054,14 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 								<p> <button id="ASong65" onClick="playPause65()">
                     <audio src="Dolby Atmos.mp3" autoplay preload="none"></audio><style='font-size:15px'><i class='fas fa-audio-description'></i>
                   </button>
-                  Das Siegel wird von  von dem US-amerikanischen Konzern „Dolby Laboratories“ seit 2014 für Produkte des Heimkinobereichs vergeben.</p>
-								<p>Dolby Atmos zählt zu den bekanntesten objektbasierten 3D-Tonformaten auf dem Kino- und Hifi-Markt. Mit Hilfe einer entsprechenden Lautsprecherausstattung sowie Platzierung und der Erweiterung durch eine „Überkopf-Dimension“, kann ein immersiver Filmsound generiert werden, bei dem verschiedenste Geräusche und Effekte aus nahezu allen Richtungen erzeugt bzw. imitiert, und im dreidimensionalen Raum frei von den statisch-monotonen Lautsprecher-Kanälen platziert werden können. Dadurch wird eine überaus realitätsnahe Soundkulisse ermöglicht.</p>
+                  Das Siegel wird von dem US-amerikanischen Konzern „Dolby Laboratories“ seit 2014 für Produkte des Heimkinobereichs vergeben.</p>
+								<p>Dolby Atmos zählt zu den bekanntesten objektbasierten 3D-Tonformaten auf dem Kino- und Hifi-Markt. Mit Hilfe einer entsprechenden Lautsprecherausstattung sowie Platzierung und der Erweiterung durch eine „Überkopf-Dimension“, kann ein immersiver Filmsound generiert werden. Hierbei können verschiedenste Geräusche und Effekte aus nahezu allen Richtungen erzeugt bzw. im Zuge von virtuellen Zonen zwischen den Lautsprechern imitiert, und deswegen im dreidimensionalen Raum frei von den statisch-monotonen Lautsprecher-Kanälen platziert werden. Dadurch wird eine überaus realitätsnahe Soundkulisse ermöglicht.</p>
 								<p>Das Logo findet sich auf zahlreichen Produkten wie zum Beispiel AV-Receivern, Lautsprechern, Blu-ray-Playern, TV-Geräten und auf Blu-rays oder auch online, bei Video on Demand-Anbietern wie Netflix oder Amazon Prime Video.</p>
 								<p>Die Vergabe weist auf eine angemessene Kompatibilität mit dem speziellen Soundformat hin, da entsprechende Datenverarbeitungen, Übertragungen und Wiedergaben erfolgen können. Für die Wiedergabe muss beispielsweise auf einer Blu-ray eine entsprechende Tonspur vorliegen, die speziell für den Film zum Erleben des 3D-Sounds konzipiert wurde.</p>
-								<p>Ferner könnte die Technologie von Dolby im Heimkinobereich theoretisch mit 34 Lautsprechern und einem Subwoofer betrieben werden, dabei passt sie sich jedoch an der vorhandenen Systemkonfiguration an.</p>
-								<p>Für die Realisierung der dynamischen Klangdimension gibt es verschiedene Lösungen und Aufstellungsvarianten, die sogar ohne Deckenlautsprecher auskommen können. Für kompakte Räume gibt es nämlich speziell entwickelte Soundbars oder die sogenannten „Atmos Enabled Speakers“ eine Lizenz, für speziell entwickelte Aufsatzlautsprecher, die mit Reflexionen an der Decke und Simulationsverfahren arbeiten.
-								Die Auszeichnung  mit dem Siegel stellt in diesem Zusammenhang ein gebündeltes Abstrahlverhalten sowie spezielle Weichen und Filter für die Realisierung eines ausgewogenen Klangbilds, trotz der sekundären Arbeit mit Deckenreflexionen sicher.</p>
+								<p>Ferner könnte die Technologie von Dolby im Heimkinobereich theoretisch mit 34 Lautsprechern und einem Subwoofer betrieben werden. Dabei passt sie sich der vorhandenen Systemkonfiguration an, da die objektbasierten Soundeffekte während einer Übertragung von Inhalten wie zum Beispiel Filmen, in Echtzeit verarbeitet und dynamisch auf die Lautsprecher abgestimmt werden.</p>
+								<p>Für die Realisierung der dynamischen Klangdimension gibt es verschiedene Lösungen und Aufstellungsvarianten, die sogar ohne Deckenlautsprecher auskommen können. Für kompakte Räume gibt es nämlich speziell entwickelte Soundbars oder die sogenannten „Atmos Enabled Speakers“ eine Lizenz, für spezifische Aufsatzlautsprecher, die mit Reflexionen an der Decke und Simulationsverfahren arbeiten. 
+								Die Auszeichnung  mit dem Siegel stellt in diesem Zusammenhang ein gebündeltes Abstrahlverhalten sowie spezielle „Weichen“ und Filter für die Realisierung eines ausgewogenen Klangbilds, trotz der sekundären Arbeit mit Deckenreflexionen sicher.</p>
+								<p><img src="Bilder/Dolby Atmos.jpg" style="width=100%;"></p>
 							</div>
 						</details>
 					</li>
@@ -1078,8 +1079,8 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
                   </button>
                   Die „DTS:X“ – Kennzeichnung wird von dem kalifornischen Unternehmen „DTS, Inc.“ verwaltet und beschreibt ein Konkurrenzformat des Kinostandards „Dolby Atmos“ der Dolby Laboratories und wurde kurz nach diesem auf den Hifi-Markt gebracht.
 								Genauso wie bei dem Konkurrenten handelt es sich um ein objektbasiertes 3D-Tonformat, das sich von dem kanalbasierten absondert.</p>
-								<p>So wird bei einem kanalbasierten Verfahren den Lautsprechern einer Anlage ein eigener Übertragungskanal zugeordnet, sodass nur eine monotone und unflexible Wiedergabe von Tönen für den entsprechenden Lautsprecher-Kanal erfolgen kann.
-								Bei einem objektbasierten Verfahren hingegen wird mit anderen Datensätzen und Techniken gearbeitet, die den Fokus auf eine detaillierte Darstellung, von sich im Raum bewegenden Objekten mit ihren jeweiligen Geräuschen ermöglicht. So wird für jedes Objekt im Voraus Vektoren, also Positionen und deren Änderung definiert. Ein Decoder wandelt schließlich die Audioszene auf das verfügbare Medium um und kann den Ton individuell an die vorhandenen Lautsprecheraufstellung und den vorliegenden Metadaten anpassen.
+								<p>So wird bei einem „kanalbasierten“ Verfahren den Lautsprechern einer Anlage ein eigener Übertragungskanal zugeordnet, sodass nur eine monotone und unflexible Wiedergabe von Tönen für den entsprechenden Lautsprecher-Kanal erfolgen kann.
+								Bei einem „objektbasierten“ Verfahren hingegen wird mit anderen Datensätzen und Techniken gearbeitet, die den Fokus auf eine detaillierte Darstellung, von sich im Raum bewegenden Objekten mit ihren jeweiligen Geräuschen ermöglicht. So wird für jedes Objekt im Voraus Vektoren, also Positionen und deren Änderung definiert. Ein Decoder wandelt schließlich die Audioszene auf das verfügbare Medium um und kann den Ton individuell an die vorhandenen Lautsprecheraufstellung und den vorliegenden Metadaten anpassen. 
 								Bei Heimkinosystemen mit AV-Receiver ist zudem eine vorherige Einmessung zur Lokalisierung der Positionen der einzelnen Lautsprecher wichtig.</p>
 								<p>Eine Auszeichnung des Siegels findet man zum Exempel auf Lautsprechern, AV-Receiver, TV-Geräten, Blu-ray-Playern oder Blu-rays, die eine funktionsfähige Datenverarbeitung und Wiedergabe sicherstellen soll. Geräte, die mit Dolby Atmos kompatibel sind können i.d.R. auch mit dem Soundformat von „dts“ betrieben werden, da beide auf dem Markt anerkannte Tonformate sind</p>
 							</div>
