--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ Es ist eine Ergänzung zum CE-Zeichen.</p>
 								<p> <button id="ASong46" onClick="playPause46()">
                     <audio src="Audio/Proplanet.mp3" autoplay preload="none"></audio><style='font-size:15px'><i class='fas fa-audio-description'></i>
                   </button>
-                  Pro Planet ist eine eigen Marke von Rewe und ist somit nur auf Rewe Produkten anzutreffen. Es besitzt eine Kennziffer mit der man im Internet Information über das Produkt und dessen Nachhaltigkeit aufrufen kann. Zusätzlich beschreibt das Siegel den Aspekt, welcher angestrebt wird zu verbessern, beziehungsweise verbessert wurde. Dabei wird das Label von außenstehenden Experten unterstützt welche auch Mitentscheidung.
+                  Pro Planet ist eine eigen Marke von Rewe(lässt sich aber auch im penny und toom finden) und ist somit nur auf Rewe Produkten anzutreffen. Es besitzt eine Kennziffer mit der man im Internet Information über das Produkt und dessen Nachhaltigkeit aufrufen kann. Zusätzlich beschreibt das Siegel den Aspekt, welcher angestrebt wird zu verbessern, beziehungsweise verbessert wurde. Dabei wird das Label von außenstehenden Experten unterstützt welche auch Mitentscheidung.
 								<br>Das Pro Planet Label ist nicht so Aussagekräftig wie ein Bio oder Fairtrade Label, ermöglicht jedoch den Einkauf etwas Nachhaltigerer Produkte für einen immer noch geringen Preis.</p>
 							</div>
 						</details>
